2013-09-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Enable some Rabbit optimizations for the TLCS-90.

2013-09-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient zeroing of longs.
	* src/z80/gen.c:
	  Remove C99 variable declaration.

2013-09-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c:
	  Do not allocate spill locations for optimized-out jump conditions.

2013-09-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient casts to long, fix handling of register deadness in shifts.

2013-09-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/stm8.src/stm8.cc: fix simulation of LDW Y,(n,SP)
	  to properly update N & Z flag bits

2013-09-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  sim/ucsim/stm8.src/inst.cc:
	  More efficient conditional jumps.

2013-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Assume spilt variables are on non-extended stack during dry runs.

2013-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.common.in,
	  configure.in,
	  src/z80/gen.c:
	  Preparations for TLCS-90 port.
	* src/stm8/peeph.def:
	  Peepholes to work around lack of RFE #357.

2013-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Negative stack adjustment efficiency, restore stack pointer from frame pointer.
	* src/stm8/peep.c:
	  Provide our own isblank()-substitute for compilers that lack C99 support.

2013-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/peep.c:
	  Stack adjustment code refactoring.

2013-09-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  src/port.h,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/z80.h,
	  src/z80/gen.c,
	  src/z80/peep.c:
	  Preparations for TLCS-90 port.

2013-09-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/addrspace.c:
	  Disable test for host regression tests.
	* src/stm8/gen.c: